<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.name.aula01.MainActivity"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilValor1">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valor_1"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tilValor2">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/valor_2"
            android:inputType="number"/>

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSomar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_somar"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginRight="3dp"
            android:onClick="somar"/>

        <Button
            android:id="@+id/btnSubtrair"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_subtrair"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="3dp"
            android:onClick="subtrair"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnMultiplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_multiplicar"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginRight="3dp"
            android:onClick="multiplicar"/>

        <Button
            android:id="@+id/btnDividir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_dividir"
            android:layout_weight="0.5"
            android:background="@color/colorPrimary"
            android:textColor="@android:color/white"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="3dp"
            android:onClick="dividir"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        tools:text="0"
        android:id="@+id/etResultado"/>

</LinearLayout>
